Adwaita: fix the special cased sidebar scrollbar...
...which I broke with the latest commit.

--- a/gtk/resources/theme/Adwaita/_common.scss
+++ b/gtk/resources/theme/Adwaita/_common.scss
@@ -1809,7 +1809,7 @@ column-header.button.dnd { // for treeview-like derive widgets
 
 .scrollbars-junction,
 .scrollbars-junction.frame { // the small square between two scrollbars
-  border: none;
+  border-color: transparent;
   background-color: darken($bg_color, 5%);
   &:backdrop { background-color: transparent; }
 }
