--- a/gtk/resources/theme/Adwaita/gtk-contained-dark.css
+++ b/gtk/resources/theme/Adwaita/gtk-contained-dark.css
@@ -2468,7 +2468,7 @@ GtkCalendar.header column-header .button.titlebutton, column-header .button:hove
 .scrollbars-junction, .scrollbar.trough,
 .scrollbars-junction.frame,
 .frame.scrollbar.trough {
-  border: none;
+  border-color: transparent;
   background-color: #2d3232; }
   .scrollbars-junction:backdrop, .scrollbar.trough:backdrop,
   .scrollbars-junction.frame:backdrop,
